--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://b4020f7ca75b8a:ce9d83be@us-cdbr-iron-east-02.cleardb.net/heroku_c93d07031796a28?reconnect=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.propearties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.format_sql=true
