--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,3 +3,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.propearties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+aws.access_key_id=AKIAU7URLYSR5BWAFLFV
+aws.secret_access_key=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
+s3.bucket=atena-api
+s3.region=sa-east-1
