--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -13,3 +13,6 @@ aws.access_key_id=AKIAU7URLYSR5BWAFLFV
 aws.secret_access_key=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
 s3.bucket=atena-api
 s3.region=sa-east-1
+
+img.profile.size=90
+img.profile.format=jpg
