--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-HELP.md
+/target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/*
 
 ### STS ###
 .apt_generated
@@ -20,12 +18,8 @@ HELP.md
 
 ### NetBeans ###
 /nbproject/private/
+/build/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-/target/
-
-### VS Code ###
-.vscode/
